--- a/README
+++ b/README
@@ -174,6 +174,9 @@ Please, share the parameters to your device here
   kernel_only_execution_time_optimized column indicates kernel execution
   time measured using OpenCL profiling (does not include data copies and
   kernel compilation).
+  The script uses default PPCG options except for the workgroup sizes
+  where workgroups of size 16x16 are set instead of the default 32x32
+  workgroups which may not work on some architectures. Please note that in some cases (e.g. for ARM Mali) you might need to set an even lower value.
 
 - You can also use the previous script to build the kernels with specific
   PPCG options.  In this case you need to pass a file containing the PPCG
